--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,8 @@ jobs:
       - name: Pull Docker image
         run: docker pull skyparmar/custom_images:latest
 
+      - name: Remove the existing containers 
+        run: docker rm -f $(docker ps -a -q)
+
       - name: Run Docker container
-        run: docker run skyparmar/custom_images:latest
+        run: docker run -p 8080:80 skyparmar/custom_images:latest
