--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,15 @@ jobs:
       - name: Pull Docker image
         run: docker pull skyparmar/custom_images:latest
 
-      - name: check the container running 
-        run: docker ps 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-
-      - name: Run Docker container
-        run: docker run -d -p 8080:80 skyparmar/custom_images:latest
-
-      - name: Test running application
+      - name: Install Docker Scan
         run: |
-          sleep 10
-          curl -I http://localhost:8080
+          sudo apt-get update
+          sudo apt-get install docker-scan-plugin
+
+      - name: Scan Docker image for vulnerabilities
+        run: docker scan skyparmar/custom_images:latest
         
 
