update the scan stage for docker images

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,14 @@ jobs:
       - name: Pull Docker image
         run: docker pull skyparmar/custom_images:latest
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Install Docker Scan
+      - name: Ensure Docker CLI is updated
         run: |
           sudo apt-get update
-          sudo apt-get install docker-scan-plugin
+          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+          sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+          sudo apt-get update
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
 
       - name: Scan Docker image for vulnerabilities
         run: docker scan skyparmar/custom_images:latest
