update the main.yml stages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
 
       - name: Scan Docker image for vulnerabilities using Clair
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd)/clair-config:/config quay.io/coreos/clair-git:latest -config=/config/config.yaml -log-level=info
+          CONTAINER_ID=$(docker run -d skyparmar/custom_images:latest)
+          docker exec "$CONTAINER_ID" /bin/bash -c "apt-get update && apt-get install -y curl && curl -sfL https://raw.githubusercontent.com/arminc/clair-scanner/master/get.sh | sh -s -- --ip $(hostname -I | awk '{print $1}') skyparmar/custom_images:latest"
 
       - name: Scan Docker image for vulnerabilities using Trivy
         run: |
