--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,36 @@
-name: Simple Workflow
+name: Pull and Push Third Pary Image 
 
 on:
-  push:
-    branches:
-      - main
+  # pull_request:
+  workflow_dispatch:
+    inputs:
+      CUSTOMER:
+        description: Customer name (e.g., ncoint)
+        required: true
+        type: string
+      CUSTOMER_ENVIRONMENT:
+        description: Customer environment (e.g., aparmar-sandbox)
+        required: true
+        type: string
+      AWS_REGION:
+        description: AWS region
+        required: true
+        default: eu-west-1
+        type: choice
+        options:
+          - ap-northeast-1
+          - ap-southeast-1
+          - ap-southeast-2
+          - ca-central-1
+          - eu-central-1
+          - eu-west-1
+          - eu-west-2
+          - eu-west-3
+          - us-east-1
+      IMAGE_SITE_URL:
+        description: Site URL (e.g., aparmar.beta.nuxeocloud.com)
+        required: true
+        type: string
 
 jobs:
   build:
