--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ on:
           - eu-west-3
           - us-east-1
       IMAGE_SITE_URL:
-        description: Site URL (e.g., aparmar.beta.nuxeocloud.com)
+        description: Site URL (e.g., docker.io)
         required: true
         type: string
 
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ inputs.IMAGE_SITE_URL || 'docker.io' }} -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Pull Docker image
         run: docker pull skyparmar/custom_images:latest
