--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,4 +58,6 @@ jobs:
             break
           fi
         done
-
+        
+    - name: Print all environment variables
+      run: env        
